fix hover effect on smaller screens

--- a/public/wp-content/themes/immersivly/src/sass/_effects.scss
+++ b/public/wp-content/themes/immersivly/src/sass/_effects.scss
@@ -182,9 +182,11 @@
 
   // Opacity
   .effect-opacity {
+    &:hover {
       img {
         @include opacity(.8);
       }
+    }
   }
 }
 
